fix double scrollbar when footer menu expanded

--- a/projects/public-client/src/app/app.component.scss
+++ b/projects/public-client/src/app/app.component.scss
@@ -22,6 +22,10 @@
 
   main {
     flex: 1;
+
+    &.prevent-scroll {
+      overflow-y: hidden;
+    }
   }
 
   app-site-footer {
